tests/ui/consts/do-not-ice-long-constant-evaluation-in-for-loop.stderr
error: constant evaluation is taking a long time
  --> $DIR/do-not-ice-long-constant-evaluation-in-for-loop.rs:10:14
   |
LL |         [(); loop {}];
   |              ^^^^^^^
   |
   = note: this lint makes sure the compiler doesn't get stuck due to infinite loops in const eval.
           If your compilation actually takes a long time, you can safely allow the lint.
help: the constant being evaluated
  --> $DIR/do-not-ice-long-constant-evaluation-in-for-loop.rs:10:14
   |
LL |         [(); loop {}];
   |              ^^^^^^^
   = note: `#[deny(long_running_const_eval)]` on by default

error: aborting due to 1 previous error

